--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </div>
         </nav>
 
-        <script src="script.js"></script>
+        <script src="assets/js/script.js"></script>
    
 </body>
 </html>
